Manage booking and listing completed

--- a/resources/assets/sass/backend/app.scss
+++ b/resources/assets/sass/backend/app.scss
@@ -19,6 +19,7 @@
 @import "components/typography";
 @import "components/snackbar";
 @import "components/datepicker";
+@import "components/cards";
 
 // Elements
 
