--- a/public/css/backend/app.css
+++ b/public/css/backend/app.css
@@ -12238,6 +12238,47 @@ _:-ms-input-placeholder, :root .mdl-slider.mdl-slider.is-upgraded {
 .dtp .center {
   text-align: center; }
 
+.card-wrap {
+  padding-left: 20px;
+  padding-right: 20px; }
+
+.demo-card-event.mdl-card {
+  /*width: 256px;*/
+  /*height: 256px;*/
+  background: #3E4EB8;
+  width: 100%; }
+
+.demo-card-event.mdl-card--complete {
+  background: rgba(0, 0, 0, 0.26); }
+
+.demo-card-event > .mdl-card__actions {
+  border-color: rgba(255, 255, 255, 0.2); }
+
+.demo-card-event > .mdl-card__title {
+  -ms-flex-align: start;
+  align-items: flex-start; }
+
+.demo-card-event > .mdl-card__title > h4 {
+  margin-top: 0; }
+
+.demo-card-event > .mdl-card__actions {
+  display: -ms-flexbox;
+  display: flex;
+  box-sizing: border-box;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.demo-card-event > .mdl-card__actions > .material-icons {
+  padding-right: 10px; }
+
+.demo-card-event > .mdl-card__title,
+.demo-card-event > .mdl-card__actions,
+.demo-card-event > .mdl-card__actions > .mdl-button {
+  color: #fff; }
+
+.mdl-card__actions--alt {
+  background: rgba(0, 0, 0, 0.26); }
+
 /**
  * Buttons
  */
