--- a/resources/assets/sass/backend/components/_header.scss
+++ b/resources/assets/sass/backend/components/_header.scss
@@ -5,5 +5,6 @@
 .mdl-layout__header--sub {
     padding-top: 20px;
     padding-bottom: 20px;
-    background-color: rgba(0,0,0,.06);
+    /*background-color: rgba(0,0,0,.06);*/
+    background-color: lighten($blue, 10%);
 }
