--- a/resources/assets/sass/backend/app.scss
+++ b/resources/assets/sass/backend/app.scss
@@ -12,6 +12,10 @@
 @import "../settings/margins";
 @import "../settings/padding";
 
+// Mixins
+@import "../mixins/generic";
+@import "../mixins/sizings";
+
 // Components
 
 @import "components/layout";
@@ -20,6 +24,7 @@
 @import "components/snackbar";
 @import "components/datepicker";
 @import "components/cards";
+@import "components/login";
 
 // Elements
 
@@ -28,4 +33,5 @@
 
 // Trumps
 @import "../trumps/sizings";
+@import "../trumps/hints";
 
