--- a/resources/assets/sass/backend/app.scss
+++ b/resources/assets/sass/backend/app.scss
@@ -25,6 +25,7 @@
 @import "components/datepicker";
 @import "components/cards";
 @import "components/login";
+@import "components/footer";
 
 // Elements
 
