--- a/resources/assets/sass/backend/components/_cards.scss
+++ b/resources/assets/sass/backend/components/_cards.scss
@@ -1,42 +1,77 @@
+/**
+ * Booking Cards
+ * -----------------------
+ *
+ * Display the booking information
+ */
+
 .card-wrap {
     padding-left: 20px;
     padding-right: 20px;
 }
 
-.demo-card-event.mdl-card {
+.card-event.mdl-card {
   /*width: 256px;*/
   /*height: 256px;*/
   background: #3E4EB8;
   width: 100%;
 }
 
-.demo-card-event.mdl-card--complete {
+.card-event.mdl-card--complete {
     background: $grey;
 }
 
-.demo-card-event > .mdl-card__actions {
+.card-event > .mdl-card__actions {
   border-color: rgba(255, 255, 255, 0.2);
 }
-.demo-card-event > .mdl-card__title {
+.card-event > .mdl-card__title {
   align-items: flex-start;
 }
-.demo-card-event > .mdl-card__title > h4 {
+.card-event > .mdl-card__title > h4 {
   margin-top: 0;
 }
-.demo-card-event > .mdl-card__actions {
+.card-event > .mdl-card__actions {
   display: flex;
   box-sizing: border-box;
   align-items: center;
 }
-.demo-card-event > .mdl-card__actions > .material-icons {
+.card-event > .mdl-card__actions > .material-icons {
   padding-right: 10px;
 }
-.demo-card-event > .mdl-card__title,
-.demo-card-event > .mdl-card__actions,
-.demo-card-event > .mdl-card__actions > .mdl-button {
+.card-event > .mdl-card__title,
+.card-event > .mdl-card__actions,
+.card-event > .mdl-card__actions > .mdl-button {
   color: #fff;
 }
 
 .mdl-card__actions--alt {
     background: $grey;
+}
+
+
+/**
+ * Information Cards
+ * -----------------------
+ *
+ * Used within the dashboard
+ */
+
+.info-card-wide.mdl-card {
+    width: 100%;
+}
+.info-card-wide > .mdl-card__title {
+    color: #fff;
+    height: 176px;
+    background: url('../../backend/image/bookings.png') center / cover;
+}
+.info-card-wide > .mdl-card__menu {
+    color: #fff;
+}
+
+.info-card-wide--pending > .mdl-card__title {
+    background: url('../../backend/image/pending.png') center / cover;
+}
+
+.info-card-wide--new > .mdl-card__title {
+    background: url('../../backend/image/new-booking.png') center / cover;
 }
