--- a/resources/assets/sass/backend/components/_login.scss
+++ b/resources/assets/sass/backend/components/_login.scss
@@ -33,3 +33,13 @@
     width: 90%;
     margin: auto;
 }
+
+
+/**
+ * Settings
+ */
+
+.user-settings {
+    padding-top: $padding-md;
+    padding-bottom: $padding-md;
+}
